Bug 388187. Incorrect initial focus event when dialogs are opened. Patch by Ginn Chen, r=aaronlev, a=dsicore