accessible/src/base/nsRootAccessible.cpp
@@ -323,14 +323,6 @@ nsresult nsRootAccessible::AddEventListeners()
     mCaretAccessible = new nsCaretAccessible(this);
   }
 
-  // Fire accessible focus event for pre-existing focus, but wait until all internal
-  // focus events are finished for window initialization.
-  mFireFocusTimer = do_CreateInstance("@mozilla.org/timer;1");
-  if (mFireFocusTimer) {
-    mFireFocusTimer->InitWithFuncCallback(FireFocusCallback, this,
-                                          0, nsITimer::TYPE_ONE_SHOT);
-  }
-
   return nsDocAccessible::AddEventListeners();
 }
 
@@ -739,6 +731,19 @@ nsresult nsRootAccessible::HandleEventWithTarget(nsIDOMEvent* aEvent,
   else
 #endif
   if (eventType.EqualsLiteral("focus")) {
+    if (aTargetNode == mDOMNode) {
+      // Got focus event for the window, we will make sure that an accessible
+      // focus event for initial focus is fired. We do this on a short timer
+      // because the initial focus may not have been set yet.
+      if (!mFireFocusTimer) {
+        mFireFocusTimer = do_CreateInstance("@mozilla.org/timer;1");
+      }
+      if (mFireFocusTimer) {
+        mFireFocusTimer->InitWithFuncCallback(FireFocusCallback, this,
+                                              0, nsITimer::TYPE_ONE_SHOT);
+      }
+    }
+
     // Keep a reference to the target node. We might want to change
     // it to the individual radio button or selected item, and send
     // the focus event to that.
